--- a/style.css
+++ b/style.css
@@ -31,26 +31,27 @@ Date: October 2024
 }
 
 /* Core body styling for better readability and overall layaout */
-body{
+body, html {
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     background-color: var(--background-color);
     color: var(--text-color);
-    line-height: 1.6;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 100vh;
-    padding: 1rem;
 }
 
 /* Main container for the app */
 .container-inicio {
     width: 100%;
     max-width: 400px; /* Optimal for mobile-first design */
+    height: 100vh;
     padding: 1rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    overflow: hidden;
 }
 
 .greeting {
@@ -102,17 +103,19 @@ h1 {
     font-size: 4rem;
     line-height: 4rem;
     text-align: start;
+    margin-bottom: 5px;
 }
 
 
 /* Container notes styles */
 .notes-container {
+    flex: 1;
     display: flex;
     flex-direction: column;
     gap: 0.6rem;
-    width: 100%;
-    max-width: 400px;
-    position: relative;
+    overflow-y: auto;
+    padding-bottom: 70px;
+    width: 100%; 
 }
 
 /* Style for the notes */
@@ -180,20 +183,21 @@ h1 {
 }
 
 /* Styles for the add new note button */
-.add-note {
+.add-note {   
     position: absolute;
-    bottom: 15px;
-    right: 15px;   
+    bottom: 40px;
+    position: fixed;
     background-color: var(--add-button-bg-color);
     color: var(--text-color);
     font-size: 2rem;
-    width: 50px;
-    height: 50px;
-    border: none;
+    width: 60px;
+    height: 60px;
+    border: 4px solid var(--button-bg-color);
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
+    align-self: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     cursor: pointer;
     transition: transform 0.2s ease, background-color 0.3s ease;
@@ -203,6 +207,7 @@ h1 {
     background-color: var(--button-hover-color);
     transform: scale(1.3);
 }
+
 
 /* Note view container */
 fieldset{
@@ -235,8 +240,8 @@ legend {
     border-radius: 50%;
     border: none;
     padding: 7px;
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -246,6 +251,10 @@ legend {
 
 form {
     width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
 
 /* Dropdown menu */
@@ -290,6 +299,10 @@ form {
     background-color: var(--button-hover-color);
 }
 
+.show {
+    display: block;
+}
+
 /* Title input */
 .title-container {
     display: flex;
@@ -322,7 +335,7 @@ form {
     display: flex;
     width: 40px;
     height: 40px;
-    border: none;
+    border: 2px solid var(--button-bg-color);
     border-radius: 50%;
     cursor: pointer;
 }
