--- a/style.css
+++ b/style.css
@@ -167,6 +167,69 @@ h1 {
     margin-top: 0.2rem;
 }
 
+/* Button to delete */
+.delete-button {
+    background-color: var(--text-color);
+    color: var(--note-text-color);
+    border: 3px solid var(--note-text-color);
+    border-radius: 30%;
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 6px;
+}
+
+.delete-button img {
+    width: 1rem;
+}
+
+/* Box to confirm note deletion */
+.confirm-dialog {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.confirm-dialog.hidden {
+    display: none;
+}
+
+.confirm-dialog-content {
+    background: #fff;
+    color: var(--secondary-text-color);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    font-weight: bold;
+}
+
+.confirm-button {
+    background-color: #ff0000;
+    color: var(--text-color);
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin: 10px;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+.confirm-button:hover {
+    background-color: #cc0000;
+}
+
 /* Button to open the note */
 .note-button {
     background-color: var(--text-color);
