--- a/style.css
+++ b/style.css
@@ -536,6 +536,12 @@ form {
     text-align: center;
 }
 
+.select-dialog-content p {
+    margin-bottom: 8px;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
 .select-button {
     background-color: #007bff;
     color: #fff;
@@ -548,6 +554,30 @@ form {
 
 .select-button:hover {
     background-color: #0056b3;
+}
+
+#category-checklist {
+    list-style-type: none;
+    padding: 0;
+    margin: 7px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 5px;
+}
+
+#category-checklist li {
+    display: flex;
+    align-items: center;
+    font-size: 1.2rem;
+    margin-top: 5px;
+    margin-left: 8px;
+}
+
+#category-checklist input[type="radio"] {
+    margin-right: 5px;
+    width: 1.1rem;
+    height: 1.1rem;
 }
 
 /* Box to rename category */
@@ -598,4 +628,55 @@ form {
 
 .rename-button:hover {
     background-color: #0056b3;
+}
+
+/* Box to delete category */
+.delete-dialog {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.delete-dialog.hidden {
+    display: none;
+}
+
+.delete-dialog-content {
+    max-width: 350px;
+    background: #fff;
+    color: #000;
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
+}
+
+.delete-button-container {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 8px;
+}
+
+.delete-button-category {
+    background-color: #ff0000;
+    color: #fff;
+    font-size: 0.9rem;
+    font-weight: 300;
+    border: none;
+    border-radius: 5px;
+    padding: 20px 35px;
+    margin: 10px;
+    cursor: pointer;
+}
+.delete-button:hover {
+    background-color: #cc0000;
 }
