--- a/style.css
+++ b/style.css
@@ -680,3 +680,60 @@ form {
 .delete-button:hover {
     background-color: #cc0000;
 }
+
+/* Box to add a new category */
+.add-dialog {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.add-dialog.hidden {
+display: none;
+}
+
+.add-dialog-content {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    max-width: 350px;
+    background: #fff;
+    color: #000;
+    font-size: 1rem;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
+}
+
+.add-dialog-content input {
+    height: 2rem;
+    font-size: 1.3rem;
+}
+
+.add-category-btn-confirm-container {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.add-button {
+    background-color: #007bff;
+    color: #fff;
+    font-size: 0.9rem;
+    font-weight: 300;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 25px;
+    margin: 10px;
+    cursor: pointer;
+}
+.add-button:hover {
+    background-color: #0056b3;
+}
